--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <article id="content">
             <section id="search-engine-optimization">
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="seo desktop with coffee" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they
@@ -42,7 +42,7 @@
                 </p>
             </section>
             <section id="online-reputation-management" class="online-reputation-management">
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+                <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="increasing reputation chart" />
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -52,7 +52,7 @@
                 </p>
             </section>
             <section id="social-media-marketing" class="social-media-marketing">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social media marketing table" />
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps
