--- a/index.html
+++ b/index.html
@@ -12,28 +12,25 @@
         <h1>Hori<span class="seo">seo</span>n</h1>
 
         <nav class="menu">
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
+
+            <a href="#search-engine-optimization">Search Engine Optimization</a>
+
+            <a href="#online-reputation-management">Online Reputation Management</a>
+
+            <a href="#social-media-marketing">Social Media Marketing</a>
+
         </nav>
     </header>
-    <main>
-        <article class="hero">
-            <img src="./assets/images/digital-marketing-meeting.jpg" alt="digital marketing meeting"
-                style="width:100%;height:800px;margin-bottom:25px;background-position:center;background-size:cover;">
-        </article>
 
+    <article class="hero">
+        <img src="./assets/images/digital-marketing-meeting.jpg" alt="digital marketing meeting">
+    </article>
+
+    <main>
         <article id="content">
             <section id="search-engine-optimization">
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="seo desktop with coffee" />
+                <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
+                    alt="seo desktop with coffee" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they
@@ -42,7 +39,8 @@
                 </p>
             </section>
             <section id="online-reputation-management" class="online-reputation-management">
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="increasing reputation chart" />
+                <img src="./assets/images/online-reputation-management.jpg" class="float-right"
+                    alt="increasing reputation chart" />
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -52,7 +50,8 @@
                 </p>
             </section>
             <section id="social-media-marketing" class="social-media-marketing">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social media marketing table" />
+                <img src="./assets/images/social-media-marketing.jpg" class="float-left"
+                    alt="social media marketing table" />
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps
@@ -60,9 +59,9 @@
                     determine which platforms are suited to your brand, using analytics to find the right markets and
                     increase your lead generation.
                 </p>
-            </<body>>
+                </<body>>
         </article>
-
+<!--added aside and put benefit as id-->
         <aside id="benefits">
             <section class="benefit-lead">
                 <h3>Lead Generation</h3>
