--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <main>
         <article id="content">
-            <section id="search-engine-optimization">
+            <section id="search-engine-optimization" class="services">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                     alt="seo desktop with coffee" />
                 <h2>Search Engine Optimization</h2>
@@ -38,7 +38,7 @@
                     allows you to increase your visibility and find the right customers for your business.
                 </p>
             </section>
-            <section id="online-reputation-management" class="online-reputation-management">
+            <section id="online-reputation-management" class="services">
                 <img src="./assets/images/online-reputation-management.jpg" class="float-right"
                     alt="increasing reputation chart" />
                 <h2>Online Reputation Management</h2>
@@ -49,7 +49,7 @@
                     you the control over what potential customers see when they search for your business.
                 </p>
             </section>
-            <section id="social-media-marketing" class="social-media-marketing">
+            <section id="social-media-marketing" class="services">
                 <img src="./assets/images/social-media-marketing.jpg" class="float-left"
                     alt="social media marketing table" />
                 <h2>Social Media Marketing</h2>
@@ -61,9 +61,11 @@
                 </p>
                 </<body>>
         </article>
+
 <!--added aside and put benefit as id-->
+
         <aside id="benefits">
-            <section class="benefit-lead">
+            <section class="benefit">
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" alt="lead gen logo" />
                 <p>
@@ -72,7 +74,7 @@
                     to your website.
                 </p>
             </section>
-            <section class="benefit-brand">
+            <section class="benefit">
                 <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png" alt="light bulb logo" />
                 <p>
@@ -81,7 +83,7 @@
                     for your business.
                 </p>
             </section>
-            <section class="benefit-cost">
+            <section class="benefit">
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png" alt="money signs" />
                 <p>
