added hero and removed img tag

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
         </nav>
     </header>
 
-    <article class="hero">
-        <img src="./assets/images/digital-marketing-meeting.jpg" alt="digital marketing meeting">
-    </article>
+    <!--added content class and hero class for top image-->
+    <section class="content">
+        <article class="hero"></article>
+    </section>
+
 
     <main>
         <article id="content">
@@ -62,7 +64,7 @@
                 </<body>>
         </article>
 
-<!--added aside and put benefit as id-->
+        <!--added aside and put benefit as id-->
 
         <aside id="benefits">
             <section class="benefit">
