added comments to html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Horiseon | Search Engine Optimization</title>
 </head>
-
+<!--added nav to the header-->
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -26,8 +26,7 @@
     <section class="content">
         <article class="hero"></article>
     </section>
-
-
+<!--added article with 3 sections with services class under main and added id so jump links in nav work-->
     <main>
         <article id="content">
             <section id="search-engine-optimization" class="services">
@@ -64,7 +63,7 @@
                 </<body>>
         </article>
 
-        <!--added aside and put benefit as id-->
+        <!--added aside and put benefit as id with 3 sections-->
 
         <aside id="benefits">
             <section class="benefit">
@@ -97,7 +96,7 @@
         </aside>
     </main>
 
-
+<!--footer of page kept as is-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
